--- a/workspace/mudi/src/main/resources/templates/home.html
+++ b/workspace/mudi/src/main/resources/templates/home.html
@@ -1,13 +1,10 @@
 <html>
-	<head>
-		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-	</head>
+	<head th:replace="~{base :: head}"></head>
 	<body>
+		<div th:replace="~{base :: logo}"></div>
+		
 		<div class="container">
-			<div class="jumbotron mb-0">
-				<h1 class="display-4">Meus Pedidos</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Meus Pedidos')}"></div>
 			
 			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
 				<div class="navbar-nav">
@@ -19,7 +16,7 @@
 				<a href="/pedido/formulario"><button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button></a>
 			</nav>
 		
-			<div class="card" th:each="pedido : ${pedidos}">
+			<div class="card mb-3" th:each="pedido : ${pedidos}">
 				<div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto</div>
 				<div class="card-body">
 					<div class="row">
